Chromium cannot establish websocket anymore since 2.67.93 (client_max_window_bits must have value)
Hi, i'm using Arch Linux and since the distro libsoup package upgraded from 2.66.2 to 2.67.93, i am getting the following JS error in chromium (confirmed on v76 and v77) when trying to establish a websocket session to the libsoup http websocket server:
Error in permessage-deflate: client_max_window_bits must have value
This behaviour does not happen with Firefox 69, which manages to establish the websocket as expected.
Is this a known/fixed issue already ? How can i help fix this ? I tried upgrading to 2.68.1 but this seems to require some porting, and i'm unsure what should be done.
Edited by Florent Thiery