WebSockets: client_max_window_bits in server response must have a value

The value is optional in the request offer, but not in the server
response.

Fixes: https://gitlab.gnome.org/GNOME/libsoup/issues/166